<resources>
    <string name="app_name">Reminder</string>
    <string name="setting">Setting</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="communicate">Communicate</string>
    <string name="night_mode">Night Mode</string>
    <string name="exit">Exit</string>
    <string name="share">Share</string>
    <string name="app_creator">created by <u><b>Mahdi Kase Atashin</b></u></string>
    <string name="app_designer">app designer <u><b>Mahdi Kase Atashin</b></u></string>
    <string name="app_info">App Info</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">phone number <u><b>+989025648561</b></u></string>
    <string name="email">email <u><b>mahdikaseatashin@gmail.com</b></u></string>
    <string name="social_media">Social Media</string>
    <string name="telegram">telegram id <u><b>@Mahdi_K3F</b></u></string>
    <string name="instagram_id">instagram id <u><b>Mahdi_K3F</b></u></string>
    <string name="hello">Hello!</string>
    <string name="suggestion">Noticed a bug or have a suggestion?</string>
    <string name="feedback_value">Please, let us know. We value your feedback greatly and where possible will look to use in to improve our app.</string>
    <string name="help_us">Help us make this app even better!</string>
    <string name="new_feedback">New Feedback</string>
    <string name="feedback_textbox">Please enter your feedback here</string>
    <string name="send">send</string>
    <string name="reminder_hint">Remind me to ...</string>
    <string name="icon_phone">Icon Phone</string>
    <string name="icon_contacts">Icon Contacts</string>
    <string name="icon_card_gift">Icon Card Gift</string>
    <string name="icon_keyboard">Icon Keyboard</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="marker">Marker</string>
    <string name="report">Report as</string>
    <string name="six_am">6:00</string>
    <string name="no_marker">No Marker</string>
    <string name="enter_the_phone_number">Enter the Phone Number</string>
    <string name="example_phone_number">e.g. +989123456789</string>
    <string name="ok">OK</string>
    <string name="birthday_of">It`s the birthday of : </string>
    <string name="enter_the_name">Enter the name</string>
    <string name="once">Once</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="pro_version">You can have this in pro version!</string>
    <string name="enter_title">Please enter a title</string>
</resources>
