<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:paddingEnd="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_the_phone_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_phone_number_dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/example_phone_number"
        android:inputType="phone"
        android:maxEms="16" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="end"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/btn_cancel_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/btn_save_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="25dp"
            android:background="?selectableItemBackground"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>
