<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPaletteBackUp"
    android:orientation="vertical"
    tools:context=".activities.FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/nav_drawer_toolbar_3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPaletteBackUp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="40dp"
            android:text="@string/hello"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="90dp"
            android:text="@string/suggestion"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="115dp"
            android:text="@string/feedback_value"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="175dp"
            android:text="@string/help_us"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="215dp"
            android:background="@drawable/round_layout_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:text="@string/new_feedback"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_send_shape"
                    android:elevation="3dp"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:onClick="mailFeedback"
                    android:textColor="@color/colorPaletteBackUp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/dash_view" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/feedback_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/feedback_textbox"
                    android:gravity="start"
                    android:hint="@string/feedback_textbox"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
